--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libjson++ (0.2) unstable; urgency=low
+
+  * New upstream release
+
+ -- Richard Kojedzinszky <krichy@cflinux.hu>  Tue, 20 Mar 2012 09:41:37 +0100
+
 libjson++ (0.1) unstable; urgency=low
 
   * Initial Release.
