debian changelog for Bullseye fix

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 libjson++ (1.1.0) stable; urgency=medium
 
-  * Debian buster release (1.1.0).
+  * Debian Bullseye release (1.1.0).
 
    -- Neszt Tibor <tibor@neszt.hu>  Sat 23 Oct 2021 19:38:19 +0200
 
